--- a/DM2025-Lab1-Master.ipynb
+++ b/DM2025-Lab1-Master.ipynb
@@ -4382,7 +4382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 636,
    "metadata": {
     "scrolled": true
    },
@@ -5869,6 +5869,18 @@
     "plt.ylabel(\"log(1 + frequency)\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. I found that stopwords appear very frequently. However, I recall that in natural language processing, it’s often mentioned that these stopwords don’t fully convey the meaning of a sentence. For instance, in the phrases “there are bananas here” and “there are apples here”, the key words humans use to distinguish the two are “banana\" and “apple\". By applying a log transformation, can reduce the influence of extremely common words such as articles and prepositions, which carry low representational value, and enhance the visibility of more informative and meaningful terms.\n",
+    "\n",
+    "    我發現停用詞出現頻率非常高，但我記得在自然語言處理中有提到這些停用詞未必能完整表示語句的意思，像是‘這裡有香蕉’跟‘這裡有蘋果’，人辨識這兩個句子的關鍵其實是‘香蕉’和‘蘋果’。而透過log轉換，可以降低我們對非常常出現的定冠詞、介係詞等代表性較低詞彙的關注，提升其他更具代表性的詞彙的可見度。\n",
+    "2. After the log transformation, the chart makes it easier to distinguish differences among extreme values.In the untransformed chart, the variations among lower-frequency words are almost invisible, but after applying the log transformation, those differences become much clearer.\n",
+    "\n",
+    "    經過 log轉換的圖可以更好辨識極端值的差異，在未經轉換的圖中，幾乎看不見較低頻率的詞之間的差異，但在轉換後可以清楚看見其差距。"
    ]
   },
   {
