phase 2(hw to 19)

--- a/DM2025-Lab1-Master.ipynb
+++ b/DM2025-Lab1-Master.ipynb
@@ -6393,7 +6393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -7201,14 +7201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Answer here\n",
     "\n",
-    "# top 5% 出現很多介係詞、關西代名詞之類的，也有很多帶有比較廣泛意義的詞彙出現\n",
-    "# bottom 1% 則是出現很多比較少見的專有名詞，這些詞彙可能代表的意思比較狹窄，適用的情境也叫單一"
+    "\n",
+    "# top 5% 的詞彙多為介係詞、連接詞或常見功能詞，如 the、of、and 等，屬於高頻通用語，雖然出現頻繁，但語意籠統、區辨度低，對主題分析幫助有限。\n",
+    "# 相對地，bottom 1% 的詞彙多為罕見或專有名詞，如人名、檔名等，出現次數極少，語意過於狹窄且不具代表性。\n",
+    "#  因此，適度過濾這兩端的極端詞彙，有助於保留中頻且具資訊性的詞語，使後續的主題或關聯分析更精準、具解釋力。"
    ]
   },
   {
@@ -7226,7 +7228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7239,7 +7241,6 @@
     "    \n",
     "    # Create the DenseFormatDF object and convert to a transactional database\n",
     "    obj = DF2DB(term_document_dfs[category])           \n",
-    "        \n",
     "    obj.convert2TransactionalDatabase(f'td_freq_db_{category_safe}.csv', '>=', 1)\n"
    ]
   },
@@ -10172,7 +10173,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "PCA: "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -11022,7 +11025,7 @@
    ],
    "source": [
     "# Answer here\n",
-    "mlb.fit(X.category_name.values)     #translate str to binary\n",
+    "mlb.fit(X.category_name.values)     #yes, by translate str to binary\n",
     "X['bin_category_name'] = mlb.transform(X['category_name']).tolist()\n",
     "X[0:9]"
    ]
